--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 <body>
 
 <header>
-  <img src="b1925941-95cf-4a4a-9682-2e8bc0cb2e5a (1).jpg" alt="Bernadette Profile Photo" class="profile-pic">
+  <img src="profile.jpg" alt="Bernadette Profile Photo">
   <h1>Bernadette V. Bartolata</h1>
   <p>Virtual Assistant | Product Researcher • Appointment Setter • CSR</p>
 
@@ -290,5 +290,6 @@
 
 </body>
 </html>
+
 
 
