--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 <body>
 
 <header>
+  <div class="profile-pic">
   <img src="profile.jpg" alt="Bernadette Profile Photo">
+</div>
   <h1>Bernadette V. Bartolata</h1>
   <p>Virtual Assistant | Product Researcher • Appointment Setter • CSR</p>
 
@@ -290,6 +292,7 @@
 
 </body>
 </html>
+
 
 
 
