--- a/index.html
+++ b/index.html
@@ -211,6 +211,23 @@
       color: #e8c7d8;
     }
   </style>
+  .profile-pic {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  border: 4px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; /* important */
+  margin: 0 auto;
+}
+
+.profile-pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 </head>
 
 <body>
@@ -292,6 +309,7 @@
 
 </body>
 </html>
+
 
 
 
