--- a/index.html
+++ b/index.html
@@ -67,14 +67,23 @@
       left: -180px;
     }
 
+    /* PROFILE IMAGE (FIXED) */
     .profile-pic {
       width: 170px;
       height: 170px;
       border-radius: 50%;
-      object-fit: cover;
       border: 5px solid rgba(255,255,255,0.7);
+      overflow: hidden;
       margin-bottom: 1.5rem;
       z-index: 1;
+    }
+
+    .profile-pic img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      display: block;
     }
 
     header h1 {
@@ -211,31 +220,15 @@
       color: #e8c7d8;
     }
   </style>
-  .profile-pic {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  border: 4px solid white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden; /* important */
-  margin: 0 auto;
-}
-
-.profile-pic img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 </head>
 
 <body>
 
 <header>
   <div class="profile-pic">
-  <img src="profile.jpg" alt="Bernadette Profile Photo">
-</div>
+    <img src="profile.jpg" alt="Bernadette Profile Photo">
+  </div>
+
   <h1>Bernadette V. Bartolata</h1>
   <p>Virtual Assistant | Product Researcher • Appointment Setter • CSR</p>
 
@@ -309,6 +302,7 @@
 
 </body>
 </html>
+
 
 
 
